move architectures into vqvae

--- a/src/models/vqvae_spatial/configs/network/3D_vqvae_spatial_encoder.yaml
+++ b/src/models/vqvae_spatial/configs/network/3D_vqvae_spatial_encoder.yaml
@@ -1,4 +1,4 @@
-_target_: architectures.architectures3d.Encoder3d
+_target_: models.vqvae_spatial.model.networks.architectures3d.Encoder3d
 latent_dim: ${model.model_config.latent_dim}
 n_blocks: 5
 n_subblocks: 1
