--- a/src/models/cvae/configs/network/3D_encoder.yaml
+++ b/src/models/cvae/configs/network/3D_encoder.yaml
@@ -2,7 +2,7 @@ _target_: mvae_ad.architectures.Encoder3d
 latent_dim: ${model.model_config.latent_dim}
 n_blocks: 5
 n_subblocks: 1
-activation: relu
+activation: silu
 block: conv
 joint_network: null
 cond_mod_network: null
