--- a/src/configs/metrics/colab.yaml
+++ b/src/configs/metrics/colab.yaml
@@ -5,3 +5,7 @@ defaults:
   - mask_ssim 
   - mask_ahmse 
   - mask_ahssim 
+  - seg_mask_mse
+  - seg_mask_ssim 
+  - seg_mask_ahmse 
+  - seg_mask_ahssim 
