--- a/src/models/vp_sde/configs/model/vp_sde_3D.yaml
+++ b/src/models/vp_sde/configs/model/vp_sde_3D.yaml
@@ -1,8 +1,8 @@
 defaults: 
-  - network/1D_unet@network
+  - network/3D_unet@network
   - schedules/vp_linear_schedule@schedule
 
 _target_: models.vp_sde.model.SDE
 
 model_config:
-  loss_type: score
+  loss_type: noise
