--- a/src/models/vp_sde/configs/predictor/predictor_cvae_ldm.yaml
+++ b/src/models/vp_sde/configs/predictor/predictor_cvae_ldm.yaml
@@ -9,14 +9,14 @@ predictor_config:
 
 diffusion_model:
   _target_: utils.model_utils.load_model_from_config
-  cfg_path: ${diffusion_model_cfg}                        # pull from defaults
-  checkpoint_path: ${diffusion_model_ckpt}    # load weights if available
+  cfg_path: ${diffusion_model_cfg}                        
+  checkpoint_path: ${diffusion_model_ckpt}    
   key: model
-  use_ema: false
+  use_ema: true
 
 vae_model:
   _target_: utils.model_utils.load_model_from_config
-  cfg_path: ${vae_model_cfg}                        # pull from defaults
-  checkpoint_path: ${vae_model_ckpt}    # load weights if available
+  cfg_path: ${vae_model_cfg}                        
+  checkpoint_path: ${vae_model_ckpt}    
   key: model_state_dict
   use_ema: false
